--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -22,4 +22,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="OpenAI-DotNet" Version="8.6.4" />
+    </ItemGroup>
+
 </Project>
