--- a/src/Model/Model.csproj
+++ b/src/Model/Model.csproj
@@ -22,6 +22,7 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
       <PackageReference Include="Polly" Version="8.5.2" />
       <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
+        <PackageReference Include="OpenAI-DotNet" Version="8.6.4" />
     </ItemGroup>
-
+    
 </Project>
