--- a/src/Model/Model.csproj
+++ b/src/Model/Model.csproj
@@ -20,9 +20,9 @@
       <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
       <PackageReference Include="Polly" Version="8.5.2" />
       <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
-        <PackageReference Include="OpenAI-DotNet" Version="8.6.4" />
     </ItemGroup>
     
 </Project>
