--- a/src/Worker/Worker.csproj
+++ b/src/Worker/Worker.csproj
@@ -22,4 +22,10 @@
 			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 		</Content>
 	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="..\..\secrets\secrets.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
