--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -23,4 +23,9 @@
 		</Content>
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Update="..\..\secrets\secrets.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
