--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -24,8 +24,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="..\..\secrets\secrets.json">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
+		<Content Include="..\..\secrets\secrets.json">
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
 	</ItemGroup>
 </Project>
