--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,6 +1,7 @@
 # Telegram Bot
 BOT_TOKEN=your_bot_token_here
 WEBHOOK_URL=https://your-domain.com
+WEBHOOK_SECRET=your_secret
 
 # Server
 PORT=3000
