--- a/bot/package.json
+++ b/bot/package.json
@@ -17,7 +17,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "load-tickers": "ts-node src/scripts/loadRussianTickers.ts"
   },
   "keywords": [],
   "author": "",
