--- a/bot/package.json
+++ b/bot/package.json
@@ -29,6 +29,7 @@
     "express": "^5.1.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.16.0",
+    "snappy": "^7.2.2",
     "telegraf": "^4.16.3",
     "winston": "^3.17.0"
   },
