--- a/config/appsettings.staging.json
+++ b/config/appsettings.staging.json
@@ -4,5 +4,8 @@
   },
   "ConnectionStrings": {
     "TRaiderDatabase": "User ID=admin;Password=password;Host=localhost;Port=5432;Database=t-raider-database;"
+  },
+  "Gpt": {
+    "Uri": "https://api.proxyapi.ru/openai/v1"
   }
 }
