--- a/terraform/yandex/production/t-raider-vm.docker-compose.yml
+++ b/terraform/yandex/production/t-raider-vm.docker-compose.yml
@@ -26,61 +26,19 @@ services:
           cpus: '1'
           memory: 2G
 
-  # migrator:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile
-  #     target: migrator
-  #   container_name: migrator
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   environment:
-  #     ConnectionStrings__TRaiderDatabase: "User ID=admin;Password=${postgres_password};Host=postgres;Port=5432;Database=t-raider-database;"
-  #   restart: on-failure
-
-  # worker:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile
-  #     target: worker
-  #   container_name: worker
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   environment:
-  #     Kafka__BootstrapServers: "kafka:9092"
-  #     ConnectionStrings__TRaiderDatabase: "User ID=admin;Password=${postgres_password};Host=postgres;Port=5432;Database=t-raider-database;"
-  #   restart: on-failure
-
-  # services:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile
-  #     target: services
-  #   container_name: services
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   environment:
-  #     Kafka__BootstrapServers: "kafka:9092"
-  #     ConnectionStrings__TRaiderDatabase: "User ID=admin;Password=${postgres_password};Host=postgres;Port=5432;Database=t-raider-database;"
-  #   restart: on-failure
-
   kafka:
     image: bitnami/kafka:latest
     container_name: kafka
     ports:
       - 9092:9092
-      - 9094:9094
     environment:
       KAFKA_CFG_NODE_ID: 1
       KAFKA_CFG_PROCESS_ROLES: broker,controller
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
-      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
       KAFKA_CFG_LOG_DIRS: /bitnami/kafka/data
       ALLOW_PLAINTEXT_LISTENER: yes
     healthcheck:
@@ -103,6 +61,48 @@ services:
       kafka:
         condition: service_healthy
     restart: unless-stopped
+
+  migrator:
+    image: cr.yandex/crpms6iaa8rs3mvdhl1a/t_raider_migrator:latest
+    container_name: migrator
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      ConnectionStrings__TRaiderDatabase: "User ID=admin;Password=${postgres_password};Host=postgres;Port=5432;Database=t-raider-database;"
+    restart: on-failure
+
+  worker:
+    image: cr.yandex/crpms6iaa8rs3mvdhl1a/t_raider_worker:latest
+    container_name: worker
+    depends_on:
+      postgres:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    environment:
+      Kafka__BootstrapServers: "kafka:9092"
+      ConnectionStrings__TRaiderDatabase: "User ID=admin;Password=${postgres_password};Host=postgres;Port=5432;Database=t-raider-database;"
+      Gpt__Uri: "https://api.proxyapi.ru/openai/v1"
+      Gpt__ApiKey: "${gpt_api_key}"
+    restart: on-failure
+
+  services:
+    image: cr.yandex/crpms6iaa8rs3mvdhl1a/t_raider_services:latest
+    container_name: services
+    ports:
+      - 4000:8080
+    depends_on:
+      postgres:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    environment:
+      Kafka__BootstrapServers: "kafka:9092"
+      ConnectionStrings__TRaiderDatabase: "User ID=admin;Password=${postgres_password};Host=postgres;Port=5432;Database=t-raider-database;"
+      Gpt__Uri: "https://api.proxyapi.ru/openai/v1"
+      Gpt__ApiKey: "${gpt_api_key}"
+    restart: on-failure
 
   # telegram-bot:
   #   build:
