--- a/terraform/yandex/production/t-raider-vm.docker-compose.yml
+++ b/terraform/yandex/production/t-raider-vm.docker-compose.yml
@@ -108,13 +108,15 @@ services:
       ConnectionStrings__TRaiderDatabase: "User ID=admin;Password=${postgres_password};Host=postgres;Port=5432;Database=t-raider-database;"
       Gpt__Uri: "https://api.proxyapi.ru/openai/v1"
       Gpt__ApiKey: "${gpt_api_key}"
+      Seq__ServerUrl: "http://seq:5341"
+      Seq__ApiKey: "${seq_api_key}"
     restart: on-failure
 
   services:
     image: cr.yandex/crpms6iaa8rs3mvdhl1a/t_raider_services:latest
     container_name: services
     ports:
-      - 4000:8080
+      - 5000:8080
     depends_on:
       postgres:
         condition: service_healthy
