--- a/terraform/yandex/production/t-raider-vm.docker-compose.yml
+++ b/terraform/yandex/production/t-raider-vm.docker-compose.yml
@@ -131,41 +131,20 @@ services:
       Seq__ApiKey: "${seq_api_key}"
     restart: on-failure
 
-  # telegram-bot:
-  #   build:
-  #     context: ./bot
-  #     dockerfile: Dockerfile
-  #   container_name: telegram-bot
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #     kafka:
-  #       condition: service_healthy
-  #   environment:
-  #     BOT_TOKEN: your_bot_token_here
-  #     WEBHOOK_URL: https://your-domain.com
+  admin-bot:
+    image: cr.yandex/crpms6iaa8rs3mvdhl1a/t_raider_admin_bot:latest
+    container_name: admin-bot
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      BOT_TOKEN: ${admin_bot_token}
       
-  #     PORT: 3000
-  #     NODE_ENV: development
+      KAFKA_BROKERS: kafka:9092
+      KAFKA_CLIENT_ID: telegram-bot
       
-  #     DB_HOST: postgres
-  #     DB_PORT: 5432
-  #     DB_NAME: t-raider-database
-  #     DB_USER: admin
-  #     DB_PASSWORD: password
-      
-  #     KAFKA_BROKERS: kafka:9092
-  #     KAFKA_CLIENT_ID: telegram-bot
-      
-  #     LOG_LEVEL: info
-  #   volumes:
-  #     - ./bot/logs:/app/logs
-  #   restart: unless-stopped
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         cpus: '0.5'
-  #         memory: 512M
+      LOG_LEVEL: info
+    restart: unless-stopped
 
 volumes:
   seq-data:
