--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           docker build . --rm --tag ${{ env.registry }}/${{ env.worker_image }}:latest --target worker
           docker build . --rm --tag ${{ env.registry }}/${{ env.migrator_image }}:latest --target migrator
           docker build -f ./bot/Dockerfile ./bot --rm --tag ${{ env.registry }}/${{ env.bot_image }}:latest
-          docker build -f ./admin-bot/Dockerfile ./bot --rm --tag ${{ env.registry }}/${{ env.admin_bot_image }}:latest
+          docker build -f ./admin-bot/Dockerfile ./admin-bot --rm --tag ${{ env.registry }}/${{ env.admin_bot_image }}:latest
 
       - name: Login in docker registry
         run: echo '${{ secrets.YANDEX_AUTHORIZED_KEY }}' | docker login --username json_key --password-stdin cr.yandex
