--- a/terraform/yandex/production/t-raider-vm.docker-compose.yml
+++ b/terraform/yandex/production/t-raider-vm.docker-compose.yml
@@ -104,20 +104,20 @@ services:
       Gpt__ApiKey: "${gpt_api_key}"
     restart: on-failure
 
-  # admin-bot:
-  #   image: cr.yandex/crpms6iaa8rs3mvdhl1a/t_raider_admin_bot:latest
-  #   container_name: admin-bot
-  #   depends_on:
-  #     kafka:
-  #       condition: service_healthy
-  #   environment:
-  #     BOT_TOKEN: ${admin_bot_token}
+  admin-bot:
+    image: cr.yandex/crpms6iaa8rs3mvdhl1a/t_raider_admin_bot:latest
+    container_name: admin-bot
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      BOT_TOKEN: ${admin_bot_token}
       
-  #     KAFKA_BROKERS: kafka:9092
-  #     KAFKA_CLIENT_ID: telegram-admin-bot
+      KAFKA_BROKERS: kafka:9092
+      KAFKA_CLIENT_ID: telegram-admin-bot
       
-  #     LOG_LEVEL: info
-  #   restart: on-failure
+      LOG_LEVEL: info
+    restart: on-failure
 
 volumes:
   postgres_data:
