--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,14 +24,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get version
+        id: version
+        run: |
+          if git describe --tags --exact-match 2>/dev/null; then
+            VERSION=$(git describe --tags --exact-match)
+          else
+            VERSION=$(git rev-parse --short HEAD)
+          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Using version: $VERSION"
 
       - name: Build docker images
         run: |
-          docker build . --rm --tag ${{ env.registry }}/${{ env.services_image }}:latest --tag ${{ env.registry }}/${{ env.services_image }}:${{ github.sha }} --target services
-          docker build . --rm --tag ${{ env.registry }}/${{ env.worker_image }}:latest --tag ${{ env.registry }}/${{ env.worker_image }}:${{ github.sha }} --target worker
-          docker build . --rm --tag ${{ env.registry }}/${{ env.migrator_image }}:latest --tag ${{ env.registry }}/${{ env.migrator_image }}:${{ github.sha }} --target migrator
-          docker build -f ./bot/Dockerfile ./bot --rm --tag ${{ env.registry }}/${{ env.bot_image }}:latest --tag ${{ env.registry }}/${{ env.bot_image }}:${{ github.sha }}
-          docker build -f ./admin-bot/Dockerfile ./admin-bot --rm --tag ${{ env.registry }}/${{ env.admin_bot_image }}:latest --tag ${{ env.registry }}/${{ env.admin_bot_image }}:${{ github.sha }}
+          docker build . --rm --tag ${{ env.registry }}/${{ env.services_image }}:latest --tag ${{ env.registry }}/${{ env.services_image }}:${{ steps.version.outputs.version }} --target services
+          docker build . --rm --tag ${{ env.registry }}/${{ env.worker_image }}:latest --tag ${{ env.registry }}/${{ env.worker_image }}:${{ steps.version.outputs.version }} --target worker
+          docker build . --rm --tag ${{ env.registry }}/${{ env.migrator_image }}:latest --tag ${{ env.registry }}/${{ env.migrator_image }}:${{ steps.version.outputs.version }} --target migrator
+          docker build -f ./bot/Dockerfile ./bot --rm --tag ${{ env.registry }}/${{ env.bot_image }}:latest --tag ${{ env.registry }}/${{ env.bot_image }}:${{ steps.version.outputs.version }}
+          docker build -f ./admin-bot/Dockerfile ./admin-bot --rm --tag ${{ env.registry }}/${{ env.admin_bot_image }}:latest --tag ${{ env.registry }}/${{ env.admin_bot_image }}:${{ steps.version.outputs.version }}
 
       - name: Login in docker registry
         run: echo '${{ secrets.YANDEX_AUTHORIZED_KEY }}' | docker login --username json_key --password-stdin cr.yandex
@@ -39,7 +52,12 @@ jobs:
       - name: Push docker images
         run: |
           docker push ${{ env.registry }}/${{ env.services_image }}:latest
+          docker push ${{ env.registry }}/${{ env.services_image }}:${{ steps.version.outputs.version }}
           docker push ${{ env.registry }}/${{ env.worker_image }}:latest
+          docker push ${{ env.registry }}/${{ env.worker_image }}:${{ steps.version.outputs.version }}
           docker push ${{ env.registry }}/${{ env.migrator_image }}:latest
+          docker push ${{ env.registry }}/${{ env.migrator_image }}:${{ steps.version.outputs.version }}
           docker push ${{ env.registry }}/${{ env.bot_image }}:latest
+          docker push ${{ env.registry }}/${{ env.bot_image }}:${{ steps.version.outputs.version }}
           docker push ${{ env.registry }}/${{ env.admin_bot_image }}:latest
+          docker push ${{ env.registry }}/${{ env.admin_bot_image }}:${{ steps.version.outputs.version }}
